syntax = "proto3";
// import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto"; 
option go_package ="/;proto"; 

service ProductCatalogService {
  rpc ListProducts(ListProductsRequest) returns (ListProductsResponse) {};
   rpc GetProduct(GetProductRequest) returns (Product) {};
   rpc CreateProduct(CreateProductRequest) returns (Product){};
   rpc UpdateProduct(UpdateProductRequest) returns (Product){};
   rpc DeleteProduct(DeleteProductRequest) returns (google.protobuf.Empty);
}

enum ProductType{
    SERVICE = 0;
    PRODUCT = 1;
}

message ListProductsRequest{
    int32 version = 1;
    int32 page_size = 2;
    int32 page_token = 3;
    string filter = 4;
    string order_by = 5;
}

message ListProductsResponse {
    int32 total_size = 1;
    int32 next_page_token = 2;
    repeated Product items = 3;
}
message GetProductRequest{
    int32 version = 1;
    int32 id = 2;
}

message CreateProductRequest{
    int32 version = 1;
    Product product = 2;
}

message UpdateProductRequest{
    int32 version = 1;
    Product product = 2;
}

message DeleteProductRequest{
    int32 version = 1;
    int32 id = 2;
}

message Category{
    int32 id = 1;
    string name = 2;
    string code = 3;
}

message Collection{
    int32 id = 1;
    string name = 2;
}

message ProductProperty{
    string name = 1;
    string value = 2;
}

message ProductVariation{
    int32 id = 1;
    int32 product_id = 2;
    Product product = 3;
    string color = 4;
    string size = 5;
    string SKU = 6;
    float price = 7;
    int32 available_quantity = 8;
    string images = 9;


}

message Product{
    int32 id = 1;
    string name = 2;
    string name_with_slug = 3;
    bool feature = 4;
    string code=5;
    int32 category_id = 6;
    Category category = 7;
    repeated Collection collections = 8;
    string madeCountry = 9;
    string gender = 10;
    string main_image = 11;
    float price = 12;
    string description = 13;
    repeated ProductProperty product_properties = 14;
    repeated ProductVariation product_variations = 15;
    ProductType type = 16;
}